--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase": "^9.12.1",
     "global": "^4.4.0",
     "next": "12.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "yarn": "^1.22.19"
   },
